# amiro_senseact

./: .gitignore  .gitmodules  .htaccess  .htpasswd  README.md  README.txt  source.sh
catkin_ws/src/dynamic_transform/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/dynamic_transform/src/: dynamic_tf_with_odom.cpp
catkin_ws/src/mapping/: CMakeLists.txt  README.md  octomap.launch  package.xml
catkin_ws/src/mapping/src/: ros_laser_scan_to_ros_pointcloud2.cpp
catkin_ws/src/rsb_to_ros_bridge/: CMakeLists.txt  package.xml
catkin_ws/src/rsb_to_ros_bridge/include/: rsb_to_ros_time_converter.hpp
catkin_ws/src/rsb_to_ros_bridge/src/: event_to_ros_clock.cpp  rsb_twb_to_ros_navmsgs_odometry.cpp  rst_pose_to_ros_navmsgs_odometry.cpp  rst_pose_to_ros_posestamped.cpp  rst_value_array_to_ros_int_array.cpp  rst_vision_image_to_ros_sensormsgs_image.cpp  rst_vision_laserscan_to_ros_sensormsgs_Laserscan.cpp
project/act/actAmiroMotor/: .gitignore  CMakeLists.txt  main.cxx
project/act/actEmergencyStop/: CMakeLists.txt  main.cxx  start.txt
project/act/motorControl/: CMakeLists.txt  main.cxx  start.txt
project/demo/CoreSLAM/: .gitignore  CMakeLists.txt  run.sh  start.txt  stop.sh
project/demo/CoreSLAMLocalization/: .gitignore  CMakeLists.txt  amirospread  build.sh  copyPrograms.sh  homing.sh  keyboard-control.sh  rsb.conf  run.sh  save-map.sh  show-map.sh  start.txt  stop.sh
project/demo/CoreSLAMLocalization/data/: Leipzig_Arena_A.pgm  finaleindhovenmap.pgm  finaleindhovenmap.yaml
project/demo/CoreSLAMLocalizationSim/: .gitignore  CMakeLists.txt  enclosed_world.world  run.sh  stop.sh
project/demo/braitenbergEdge/: .gitignore  CMakeLists.txt  run.sh  start.txt  stop.sh
project/demo/braitenbergObstacleStop/: .gitignore  CMakeLists.txt  copyPrograms.sh  rsb.conf  run.sh  runObstacleStop.sh  start.txt  stop.sh
project/demo/cameraJpeg/: .gitignore  CMakeLists.txt  run.sh  start.txt  stop.sh
project/demo/claasDataRecording/: .gitignore  CMakeLists.txt  build.sh  start.txt
project/demo/claasDataRecording/PeakCan/: PeakCan
project/demo/claasDataRecording/rsb_ws_bridge_claas/: rsb_ws_bridge_claas
project/demo/claasDataRecording/senseLASE_2000D_226/: senseLASE_2000D_226
project/demo/claasDataRecording/senseSick_LD_MRS/: senseSick_LD_MRS
project/demo/exploration/: .gitignore  CMakeLists.txt  amirospread  clean.sh  copyPrograms.sh  rsbsend.sh  scpall.sh  start.txt  startExplo.sh  stopExplo.sh
project/demo/final2015/: .gitignore  CMakeLists.txt  copyPrograms.sh  killFinal.sh  rsb.conf  run.sh  start.txt  startFinal.sh  startFollow.sh  stop.sh
project/demo/final2015/sim/: rsb.conf  simStateInitFollow.sh  simStateInitWaypoint.sh  simStateStopFollow.sh  simStateStopWaypoint.sh  simStateTurn.sh
project/demo/final2015/sim/states/: initWaypoint.txt
project/demo/geptroOpenChallenge/: .gitignore  CMakeLists.txt  backgroundStart.sh  copyPrograms.sh  run.sh  start.txt  stop.sh
project/demo/openChallenge2015/: .gitignore  CMakeLists.txt  amirospread  background.sh  backgroundStop.sh  copyPrograms.sh  killChallenge.sh  openChallangeState.txt  run.sh  start.txt  startChallenge.sh  stop.sh
project/demo/openChallenge2015/sim/: deliverObject.sh  object3.txt  rsb.conf  slamStart.sh
project/demo/openChallenge2015Simulation/: .gitignore  CMakeLists.txt  cleancmake.sh  copyPrograms.sh  run.sh  stop.sh
project/demo/openChallenge2015_onlyExplo/: .gitignore  CMakeLists.txt  rsb.conf  run.sh  start.txt  stop.sh
project/demo/openChallenge2016/: .gitignore  CMakeLists.txt  build-debug.sh  build.sh  copyPrograms.sh  rsb.conf  run.sh  show-map.sh  start.txt  startFollow.sh  stop.sh
project/demo/openChallenge2016/poses/: startPose.txt
project/demo/openChallenge2016/sim/: abort-navigation.sh  driveToTarget.sh  simStateFailedRoomRec.sh  simStateHoming.sh  simStateInitFollow.sh  simStateInitGoToRoom.sh  simStateReachedRoomRec.sh  simStateStopFollow.sh  simStateStopWaypoint.sh  simStateTurn.sh
project/demo/openChallenge2016/sim/states/: failedroomrec.txt  (+4 more)
project/demo/particlefilter/: .gitignore  CMakeLists.txt  copyPrograms.sh  rsb.conf  run.sh  start.txt  stop.sh
project/demo/particlefilterEvaluation/: CMakeLists.txt  build-debug.sh  copyPrograms.sh  keyboard-control.sh  rsb.conf  run-remote.sh  run.sh  show-map.sh  stop.sh
project/demo/roboZoo/: .gitignore  CMakeLists.txt  amirospread  copyPrograms.sh  playSong.sh  rsb.conf  run.sh  start.txt  stop.sh
project/demo/roboZoo/Choreos/: backward_10cm_1s_blue.xml  backward_10cm_2s_blue.xml  backward_30cm_3s_blue.xml  backward_34cm_3s_red.xml  backward_5cm_1s_yellow.xml  backward_blue.xml  blink_white_blue_white_blue_white.xml  blink_white_lila_white_lila_white.xml  blink_white_yellow_white_yellow_white.xml  forward_10cm_1s_blue.xml  forward_15cm_1_5s_blue.xml  forward_20cm_2s_blue.xml  forward_20cm_2s_green.xml  forward_34cm_3s_red.xml  forward_5cm_1s_yellow.xml  song00.xml  song02.xml  song12.xml  song20.xml  song21.xml  song40.xml  song42.xml  song50.xml  song51.xml  song52.xml  turn_m135deg_4s_green.xml  turn_m180deg_3s_green.xml  turn_m30deg_2s_green.xml  turn_m45deg_2s_green.xml  turn_m60deg_2s_green.xml  turn_m90deg_2s_green.xml  turn_m90deg_3s_green.xml  turn_p135deg_4s_green.xml  turn_p180deg_3s_green.xml  turn_p180deg_4s_green.xml  turn_p30deg_2s_green.xml  turn_p45deg_2s_green.xml  turn_p60deg_2s_green.xml  turn_p90deg_2s_green.xml  turn_p90deg_3s_green.xml  (+5 more)
project/demo/roboZoo/sim/: song0  song1  song2  song4  song5
project/demo/webServer/: .gitignore  CMakeLists.txt  amirospread  copyPrograms.sh  rsb.conf  run.sh  start.txt  stop.sh
project/fromISY/motorControl/: CMakeLists.txt
project/process/mapServer/: .gitignore  CMakeLists.txt  build.sh  main.cxx
project/process/surfTrackingWithBebot/: .gitignore  CMakeLists.txt  main.cxx  tableTopDetection.hpp  templateMatching.hpp
project/sandbox/helloBebot/: .gitignore  CMakeLists.txt  main.cxx
project/sandbox/tabletopObjectRecognitionWithLocalBinaryPatterns/: .gitignore  CMakeLists.txt  apple.pgm  apple1.pgm  bg.txt  csv.ext  rsb.conf  test.vec
(+3940 files in other folders)
